--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@
 
 html, body {
   margin: 0;
+  padding: 0;
   font-family: "Open Sans", sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
